docs: clarify HTTP requests capability description in index page

--- a/index.mdx
+++ b/index.mdx
@@ -27,7 +27,7 @@ At its core, Dropstep allows you to define intelligent workflows in a declarativ
 - **Browser automation:** Instruct an AI agent to perform tasks in a web browser, like filling forms, navigating sites, or extracting information.
 - **Shell scripts:** Run arbitrary shell commands or scripts for system-level tasks.
 - **Python programs:** Embed Python for data processing, custom logic, or leverage specific Python libraries.
-- **HTTP requests:** Integrate with any API or service via HTTP requests.
+- **HTTP requests:** Integrate with external APIs or services via HTTP requests.
 
 Dropstep is designed to bring structure and extensibility to your automations, emphasizing:
 
