--- a/workflows/templating.mdx
+++ b/workflows/templating.mdx
@@ -28,8 +28,9 @@ The results of upstream steps are available to downstream steps. This is key for
     - [`http`](/workflows/steps#http): An object containing `status_code`, `headers` (map), and `body` (parsed JSON, string, or base64).
     - [`browser_agent`](/workflows/steps#browser_agent): An object based on the step's `output_schema` or the default `{"summary": "string"}` structure.
     
-#### Accessing Nested Fields
-If a step's `output` is an object (e.g., JSON), you can access its nested fields using dot notation.
+<Info>
+    If a step's `output` is an object (e.g., JSON), you can access its nested fields using dot notation.
+</Info>
     
 #### Syntax
 `{{ steps.<step_id>.output.<field>.<subfield> }}`
@@ -60,7 +61,7 @@ steps:
 Variables defined in the `inputs` block of your `dropstep.yml` and populated via `dsvars.yml` are available globally. See [Inputs & Varfiles](/workflows/inputs-varfiles) for details.
 
 #### Syntax 
-- `{{ input_name }}`
+`{{ input_name }}`
     
 #### Example
 ```yaml dropstep.yml icon="file-code" focus={1-3,8}
@@ -85,7 +86,7 @@ The prompt becomes: `"Go to https://example.com and summarize the page."`
 For steps that write their results to a file (primarily [`browser_agent`](/workflows/steps#browser_agent) which saves its structured JSON output), you can reference the path to this output file.
     
 #### Syntax
-- `{{ steps.<step_id>.output_file }}`
+`{{ steps.<step_id>.output_file }}`
     
 #### Example
 ```yaml dropstep.yml icon="file-code" focus={6-12}
@@ -107,7 +108,7 @@ steps:
 When using `upload_files` in a [`browser_agent`](/workflows/steps#browser_agent) step, the `name` you assign to a file becomes a template variable within that step. It resolves to the *basename* of the file's path.
     
 #### Syntax
-- `{{ file_upload_name }}`
+`{{ file_upload_name }}`
     
 #### Example
 ```yaml dropstep.yml icon="file-code" focus={9-13}
@@ -132,12 +133,17 @@ Here, `{{ resume_doc }}` will resolve to `my_document_v2.pdf`. The *absolute pat
 
 If a variable you are templating holds a complex data structure (like a map or array), you can get its JSON representation by appending `.json` to the expression.
 
-### Syntax
-- `{{ some_variable.json }}`
-- `{{ steps.<id>.output.json }}`
-- `{{ steps.<id>.output_file.json }}`
+<Info>
+    This is useful for passing structured data as a string argument to scripts or within API calls that expect stringified JSON.
+</Info>
 
-This is useful for passing structured data as a single string argument to scripts or within API call bodies that expect stringified JSON.
+### Syntax
+`{{ some_variable.json }}`
+
+`{{ steps.<id>.output.json }}`
+
+`{{ steps.<id>.output_file.json }}`
+
 
 ### Example
 ```yaml dropstep.yml icon="file-code"
