--- a/workflows/overview.mdx
+++ b/workflows/overview.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Overview"
-description: "A high-level overview of Dropstep's workflow structure"
+description: "A high-level overview of Dropstep's workflow structure."
 ---
 
 Dropstep workflows are defined in a declarative YAML format (by default `dropstep.yml`). This approach allows us to clearly specify *what* tasks need to be done and how they connect, rather than getting bogged down in imperative scripting for every detail.
@@ -11,14 +11,17 @@ At a high level, a workflow is made up of:
     <Card title="Metadata" icon="folder-tree" href="/workflows/metadata">
         Essential identifying information for a workflow.
     </Card>
-    <Card title="Variables" icon="code" href="/workflows/variables">
-        Define parameters for your workflow to use at runtime.
+    <Card title="Inputs & Varfiles" icon="file-code" href="/workflows/inputs-varfiles">
+        Define parameters and provide values for your workflow to use at runtime.
+    </Card>
+    <Card title="Templating" icon="code" href="/workflows/templating">
+        Inject dynamic data into your workflows.
     </Card>
     <Card title="Providers" icon="key" href="/workflows/providers">
         Configure access to external services.
     </Card>
     <Card title="Steps" icon="person-walking" href="/workflows/steps">
-        Define behavior and chain complex operations.
+        Define behavior and chain complex operations with data handoff between steps.
     </Card>
 </CardGroup>
 
