docs: add deployment guide and update navigation links

--- a/index.mdx
+++ b/index.mdx
@@ -60,7 +60,7 @@ If you've ever duct-taped Python scripts, shell commands, and RPA bots together,
   <Card title="Quickstart" icon="rocket" href="/quickstart">
     Install Dropstep and run your first agent workflow.
   </Card>
-  <Card title="Workflow Definition" icon="code" href="/workflow-definition">
+  <Card title="Workflow Definition" icon="code" href="/workflows/overview">
     Learn the Dropstep YAML format, step types, and data passing.
   </Card>
 </CardGroup>
