--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Quickstart'
-description: 'Start building intelligent workflows in under 5 minutes'
+description: 'Build your first agentic workflow in under 5 minutes.'
 ---
 
 ## Installation
@@ -157,4 +157,4 @@ This simple example demonstrates the core power of Dropstep: defining intelligen
 
 **This is just the tip of the iceberg.** Dropstep is designed to be extensible and flexible, allowing you to define workflows that fit your specific needs. 
 
-**Ready to learn more?** Dive into the [Workflow Definition Guide](/workflow-definition) to explore all step types, advanced templating, and inter-step data handoff.
+**Ready to learn more?** Dive into the [Workflow Definition Guide](/workflows/overview) to explore all step types, advanced templating, and inter-step data handoff.
