docs: add step module documentation and icons for navigation

--- a/guides/deployment-ci.mdx
+++ b/guides/deployment-ci.mdx
@@ -1,4 +1,5 @@
 ---
 title: "Deployment / CI"
 description: "Deploy Dropstep workflows to production and integrate with CI/CD pipelines."
+icon: "code-pull-request"
 ---
