--- a/index.mdx
+++ b/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Introduction"
 description: "Agents, for real this time."
+icon: "book-open"
 ---
 
 <img
@@ -22,7 +23,7 @@ Dropstep is an **agentic automation framework**.
 
 At its core, Dropstep lets you define intelligent workflows in a declarative, human-readable YAML format. These workflows are made up of:
 
-- **Browser automation:** Instruct an AI agent to perform tasks in a web browser — like filling forms, uploading files, or extracting information.
+- **Browser automation:** Instruct an AI agent to perform tasks in a web browser like filling forms, uploading files, or extracting information.
 - **Shell scripts:** Run arbitrary shell commands or scripts for system-level tasks.
 - **Python programs:** Embed Python for data processing, custom logic, or specific library use.
 - **HTTP requests:** Integrate with external APIs or services via HTTP calls.
@@ -36,13 +37,13 @@ Dropstep is designed to bring structure and extensibility to your automations, e
 - **Secrets management:** Securely handle API keys and tokens via varfiles and redacted logs.
 - **Extensibility:** Extend workflows with custom shell or Python logic when needed.
 
-Whether you're automating the browser, running scripts, or calling APIs — Dropstep gives you a single interface to orchestrate it all.
+Whether you're automating the browser, running scripts, or calling APIs, Dropstep gives you a single interface to orchestrate it all.
 
 ---
 
 ## Why Dropstep?
 
-Most tools for automation give you verbose scripts, brittle bots, or visual builders that don’t scale. Dropstep is different — a pluggable, declarative framework for flexible, AI-integrated automation.
+Most tools for automation give you verbose scripts, brittle bots, or visual builders that don't scale. Dropstep is different: a pluggable, declarative framework for flexible, AI-integrated automation.
 
 - **Agent-native:** Drive browser tasks with LLMs and natural-language prompts.
 - **Code-first:** Automate shell, HTTP, and Python steps in a single YAML file.
