--- a/workflows/inputs-varfiles.mdx
+++ b/workflows/inputs-varfiles.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Inputs & Varfiles"
 description: "Define workflow inputs, provide values with a varfile, and integrate environment variables."
+icon: "file-code"
 ---
 
 Dropstep workflows are designed to be dynamic and configurable. This is achieved by defining **workflow `inputs`**, providing their values via **varfiles**, and **environment variables**. These resolved values can then be used throughout your workflow via Dropstep's [templating system](/workflows/templating).
