--- a/workflows/overview.mdx
+++ b/workflows/overview.mdx
@@ -20,7 +20,7 @@ At a high level, a workflow is made up of:
     <Card title="Providers" icon="key" href="/workflows/providers">
         Configure access to external services.
     </Card>
-    <Card title="Steps" icon="person-walking" href="/workflows/steps">
+    <Card title="Steps" icon="person-walking" href="/steps/overview">
         Define behavior and chain complex operations with data handoff between steps.
     </Card>
 </CardGroup>
