--- a/workflows/providers.mdx
+++ b/workflows/providers.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Providers"
 description: "Configure access to external services."
+icon: "key"
 ---
 
 Certain Dropstep steps, particularly the [`browser_agent`](/workflows/steps#browser_agent), rely on external services like LLM providers (e.g., OpenAI) to function. The providers section in your `dropstep.yml` allows you to define and manage the configurations for these services.
