--- a/workflows/templating.mdx
+++ b/workflows/templating.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Templating"
 description: "Use Dropstep's templating system to inject dynamic data into your workflows."
+icon: "code"
 ---
 
 Dropstep features a powerful yet simple templating system that allows you to make your workflows **dynamic** and **reusable**. By embedding expressions within the `{{ ... }}` syntax, you can inject values from various sources directly into your steps such as prompts, login credentials, URLs, and more.
